--1.Bitmap 图片压缩     2.加入testFragment     3.尝试直接用imageview／／ 否定

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -30,4 +30,9 @@
         android:id="@+id/map"
         android:icon="@drawable/map"
         android:title="地图" />
+
+    <item
+        android:id="@+id/des"
+        android:icon="@drawable/map"
+        android:title="地图2" />
 </menu>
