--- a/app/src/main/res/layout-xlarge/fragment_desc.xml
+++ b/app/src/main/res/layout-xlarge/fragment_desc.xml
@@ -19,6 +19,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#85a9df"
     android:id="@+id/refresh_layout">
     <RelativeLayout
         android:layout_width="match_parent"
