--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,15 @@
             android:layout_marginEnd="10dp"
             android:layout_centerVertical="true"
             android:background="@drawable/icon_setting_white"/>
+
+        <ImageButton
+            android:layout_toLeftOf="@+id/setting_button"
+            android:id="@+id/set2_button"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_centerVertical="true"
+            android:background="@drawable/setting2"
+            android:layout_height="wrap_content"/>
     </RelativeLayout>
 
     <FrameLayout
