"ui主题统一，实现单点触控rviz平移"

--- a/app/src/main/res/drawable/actionbar_bg.xml
+++ b/app/src/main/res/drawable/actionbar_bg.xml
@@ -3,7 +3,7 @@
 
     <gradient
         android:startColor="#08244c"
-        android:endColor="#093166"
+        android:endColor="#51CEE2"
         android:type="linear" />
 
 
