--- a/app/src/main/res/layout/fragment_desc.xml
+++ b/app/src/main/res/layout/fragment_desc.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:background="#3266ba"
+        android:background="@drawable/actionbar_bg"
         android:layout_height="match_parent">
         <cn.iscas.xlab.xbotplayer.customview.MapView2
             android:id="@+id/map_view2"
@@ -132,7 +132,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:background="@drawable/bt_selector"
+                android:background="@drawable/bt_w"
                 android:text="MAP_SHOW"/>
 
             <Button
@@ -140,7 +140,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:background="@drawable/bt_selector"
+                android:background="@drawable/bt_w"
                 android:text="RESET"/>
         </LinearLayout>
 
