--- a/app/src/main/res/layout/fragment_robot_state.xml
+++ b/app/src/main/res/layout/fragment_robot_state.xml
@@ -80,50 +80,6 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/layout_item1"/>
 
-    <RelativeLayout
-        android:id="@+id/layout_item2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/divider2"
-        android:paddingStart="30dp"
-        android:paddingTop="6dp"
-        android:paddingBottom="16dp">
-
-        <TextView
-            android:id="@+id/cloud_degree_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="云台角度"
-            android:layout_centerVertical="true"
-            android:textSize="14sp"
-            android:textColor="@color/colorStatePageText"
-            />
-
-        <cn.iscas.xlab.xbotplayer.customview.CustomSeekBar
-            android:id="@+id/seekbar_cloud_degree"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_toEndOf="@id/cloud_degree_txt"
-            android:paddingLeft="10dp"
-            app:is_horizontal="true"
-            app:track_length="200dp"
-            app:track_width="5dp"
-            app:track_color="@color/colorPrimary"
-            app:indicator_radius="9dp"
-            app:indicator_color="@color/colorLightPink"
-            app:bubble_color="@color/colorPrimary"
-            app:bubble_height="20dp"
-            app:bubble_width="30dp"
-            app:bubble_text_size="12sp"
-            app:bubble_text_color="@color/colorLightPink"
-            app:min_value="-90"
-            app:max_value="90"
-            app:value_text_size="14sp"
-            app:value_text_color="@color/colorStatePageText"/>
-    </RelativeLayout>
-
-
 
     <View
         android:id="@+id/divider3"
@@ -131,7 +87,7 @@
         android:layout_height="1dp"
         android:background="#eeeeee"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/layout_item2"/>
+        android:layout_below="@+id/layout_item2"/>
 
     <LinearLayout
         android:id="@+id/linear_layout"
@@ -215,5 +171,49 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/layout_item2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="30dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="16dp"
+        android:layout_below="@+id/divider2"
+        android:layout_alignParentStart="true">
+
+        <TextView
+            android:id="@+id/cloud_degree_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="云台角度"
+            android:layout_centerVertical="true"
+            android:textSize="14sp"
+            android:textColor="@color/colorStatePageText"
+            />
+
+        <cn.iscas.xlab.xbotplayer.customview.CustomSeekBar
+            android:id="@+id/seekbar_cloud_degree"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_toEndOf="@id/cloud_degree_txt"
+            android:paddingLeft="10dp"
+            app:is_horizontal="true"
+            app:track_length="200dp"
+            app:track_width="5dp"
+            app:track_color="@color/colorPrimary"
+            app:indicator_radius="9dp"
+            app:indicator_color="@color/colorLightPink"
+            app:bubble_color="@color/colorPrimary"
+            app:bubble_height="20dp"
+            app:bubble_width="30dp"
+            app:bubble_text_size="12sp"
+            app:bubble_text_color="@color/colorLightPink"
+            app:min_value="-90"
+            app:max_value="90"
+            app:value_text_size="14sp"
+            app:value_text_color="@color/colorStatePageText"/>
+    </RelativeLayout>
 
 </RelativeLayout>
