--- a/app/src/main/res/menu/menu_swap.xml
+++ b/app/src/main/res/menu/menu_swap.xml
@@ -18,6 +18,6 @@
 
     <item
         android:id="@+id/area_choose"
-        android:icon="@drawable/area"
+        android:icon="@drawable/area2"
         android:title="划区清扫" />
 </menu>
